# ChangeLog for sys-apps/systemd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.55 2012/10/04 20:03:09 mgorny Exp $

*systemd-194 (04 Oct 2012)

  04 Oct 2012; Michał Górny <mgorny@gentoo.org> +systemd-194.ebuild:
  Version bump.

*systemd-193 (30 Sep 2012)

  30 Sep 2012; Michał Górny <mgorny@gentoo.org> +systemd-193.ebuild,
  metadata.xml:
  Version bump.

*systemd-192 (26 Sep 2012)

  26 Sep 2012; Michał Górny <mgorny@gentoo.org> +systemd-192.ebuild:
  Version bump.

*systemd-191-r1 (26 Sep 2012)

  26 Sep 2012; Michał Górny <mgorny@gentoo.org>
  +files/191-0003-log-fix-repeated-invocation-of-vsnprintf-vaprintf-in.patch,
  +systemd-191-r1.ebuild, -systemd-190.ebuild, -systemd-191.ebuild:
  Fix libc segfault, bug #436196.

  24 Sep 2012; Michał Górny <mgorny@gentoo.org>
  +files/191-0001-Disable-udev-targets-for-udev-190.patch,
  +files/191-0002-journal-bring-mmap-cache-prototype-in-sync.patch,
  -files/0001-Disable-udev-targets-for-udev-190.patch, systemd-191.ebuild:
  Fix journald prototype missync, bug #436098.

*systemd-191 (22 Sep 2012)
*systemd-190 (22 Sep 2012)

  22 Sep 2012; Michał Górny <mgorny@gentoo.org>
  +files/0001-Disable-udev-targets-for-udev-190.patch, +systemd-190.ebuild,
  +systemd-191.ebuild:
  Version bump.

  21 Sep 2012; Michał Górny <mgorny@gentoo.org>
  -files/0001-Disable-udev-targets-for-udev-188.patch,
  -files/0001-util-never-follow-symlinks-in-rm_rf_children.patch,
  -files/0002-journal-PAGE_SIZE-is-not-known-on-ppc-and-other-arch.patch,
  -systemd-44-r2.ebuild:
  Drop old.

*systemd-189-r3 (17 Sep 2012)

  17 Sep 2012; Michał Górny <mgorny@gentoo.org>
  +files/0004-journal-don-t-try-to-compress-without-XZ.patch,
  +systemd-189-r3.ebuild, -systemd-189-r2.ebuild:
  Backport patch for journal storage without USE=lzma, wrt bug #434972.

*systemd-189-r2 (08 Sep 2012)
