@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/systemd/systemd-194.ebuild,v 1.1 2012/10/04 20:03:09 mgorny Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/systemd/systemd-194.ebuild,v 1.2 2012/10/04 20:16:11 mgorny Exp $
 
 EAPI=4
 
@@ -142,6 +142,10 @@ src_install() {
 	# Disable storing coredumps in journald, bug #433457
 	mv "${D}"/usr/lib/sysctl.d/coredump.conf \
 		"${D}"/etc/sysctl.d/coredump.conf.disabled || die
+
+	# Preserve empty dirs in /etc & /var, bug #437008
+	keepdir /etc/binfmt.d /etc/modules-load.d /etc/tmpfiles.d \
+		/etc/systemd/ntp-units.d /etc/systemd/user /var/lib/systemd
 
 	# Check whether we won't break user's system.
 	[[ -x "${D}"/bin/systemd ]] || die '/bin/systemd symlink broken, aborting.'
